<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_19_tracker"
                android:textSize="40sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_total_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                android:text="@string/total_case"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="19dp"
                />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_total_data"
                android:text="@string/total_case"
                android:textSize="19sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="19dp"
                />

            <LinearLayout
                android:id="@+id/ll_data"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tv_total"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:padding="16dp"
                    app:cardBackgroundColor="@color/green"
                    android:layout_marginBottom="12dp"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp">

                        <TextView
                            android:id="@+id/tv_recovered_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recovered"
                            android:textSize="19sp"
                            android:textColor="@color/white"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            />

                        <TextView
                            android:id="@+id/tv_recovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recovered"
                            android:textSize="19sp"
                            android:textColor="@color/white"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:padding="16dp"
                    app:cardBackgroundColor="@color/red"
                    android:layout_marginBottom="12dp"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp">

                        <TextView
                            android:id="@+id/tv_death_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths"
                            android:textColor="@color/white"
                            android:textSize="19sp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            />

                        <TextView
                            android:id="@+id/tv_death"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths"
                            android:textSize="19sp"
                            android:textColor="@color/white"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:padding="16dp"
                    app:cardBackgroundColor="@color/blue"
                    android:layout_marginBottom="12dp"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp">

                        <TextView
                            android:id="@+id/tv_positives_data"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/positives"
                            android:textSize="19sp"
                            android:textColor="@color/white"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            />

                        <TextView
                            android:id="@+id/tv_positives"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/positives"
                            android:textSize="19sp"
                            android:textColor="@color/white"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/btn_see_provinces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ll_data"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/see_all"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="See provinces of Indonesia"
                app:layout_constraintTop_toBottomOf="@id/ll_data"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="12dp"
                android:textSize="15sp"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_province_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_see_provinces"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:listitem="@layout/province_list_item"
                tools:itemCount="3"
                android:layout_marginTop="12dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>